<resources>
    <string name="app_name">Uas</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter Your Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_request">Send Request</string>
    <string name="change_password">Change Password</string>
    <string name="name">Nama</string>
    <string name="Alamat">Alamat</string>
    <string name="Email">Email</string>
    <string name="peserta_arisan">Peserta Arisan</string>
    <string name="arisan">List Arisan</string>
    <string name="detailArisan">Detail Arisan</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
